--- a/ProyectoIntro/plantillas/miPlantilla.html
+++ b/ProyectoIntro/plantillas/miPlantilla.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title> HOLA MUNDO</title>
+    <link rel="stylesheet" type="text/css" href="base.css">
   </head>
   <body>
     
