--- a/ProyectoIntro/plantillas/base.html
+++ b/ProyectoIntro/plantillas/base.html
@@ -14,7 +14,7 @@
     {% include "superior/barra.html" %}
     <h1 style="background-color: #5DCC06; color: white; text-align:center"> PSE </h1>
 
-    <h3> Programa de Supervicion adcademica Especial</h3>
+    <h3> Programa de Supervicion Academica Especial</h3>
 
     {% block content %}
 
