Se actualizo el proyecto para empezarlo nuevamente
se borro todo lo que no servia y se diseño un poco la pagina /PSE
se agregaron las fotos necesarias y se arreglo el problema del CSS

--- a/ProyectoIntro/plantillas/base.html
+++ b/ProyectoIntro/plantillas/base.html
@@ -8,19 +8,16 @@
     <title>
       {% block title %} {% endblock %}
     </title>
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
   </head>
   <body>
+    {% include "superior/Encabezado.html" %}
     {% include "superior/barra.html" %}
-    <h1 style="background-color: #5DCC06; color: white; text-align:center"> PSE </h1>
-
-    <h3> Programa de Supervicion Academica Especial</h3>
-
+    
     {% block content %}
 
 
     {% endblock %}
 
-    <p style="background-color: #5DCC06; color: white ;text-align: right"> Gracias por su visita </p>
   </body>
 </html>
