--- a/ProyectoIntro/plantillas/PSE.html
+++ b/ProyectoIntro/plantillas/PSE.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %} Admin {% endblock %}
+{% block title %} PSE {% endblock %}
 
 {% block content %}
-  <p> Estamos a día: {{dameFecha}}</p>
-  
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/d1-UX6aR_TM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 {% endblock %}
