--- a/ProyectoIntro/plantillas/superior/barra.html
+++ b/ProyectoIntro/plantillas/superior/barra.html
@@ -4,36 +4,42 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title></title>
   </head>
-
-  <style>
-    #barra {
-      padding: 15px 0;
-      list-style: none;
-      background-color: #89a4f7;
-      border-radius: 7px;
-      border-top-style: none;
-      border-right-style: outset;
-      border-bottom-style: outset;
-      border-left-style: none;
-      border-width: 1.5px;
-      border-color:  lightskyblue;
-    }
-
-    #barra li{
-      text-transform: uppercase;
-      color: white;
-      display: inline;
-      margin: 30px 20px;
-    }
-  </style>
-
-  <body>
-    <ul id="barra">
-      <li>Menu</li>
-      
+  
+  
+  
+  
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Menu
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">Ver Cursos</a>
+          <a class="dropdown-item" href="#">Ayuda</a>
+          <a class="dropdown-item" href="#">Salir</a>
+        </div>
+      </li>
     </ul>
+  </div>
+</nav>
+  
+  
+  
+  
+  
+  
+  
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   </body>
 </html>
 
