--- a/ProyectoIntro/plantillas/superior/Encabezado.html
+++ b/ProyectoIntro/plantillas/superior/Encabezado.html
@@ -19,41 +19,14 @@
       display: inline;
       padding-right: 40px;
     }
-    #logo{
-      border-style: outset;
-    }
   </style>
 
   <body>
-    <ul id="encabezado">
-      <li> <img i id="logo" src="{% static "images/logo1.png" %}"  height="95" width="80" /> </li>      
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li> <img src="{% static "images/user.png" %}" height="40" width="43" /> </li>
-      <li> <img src="{% static "images/salir.png" %}" height="30" width="30" /> </li>
-    </ul>
+    <div class="row no-gutters">
+      <div class="col-sm-6 col-md-8"><img i id="logo" src="{% static "images/logo1.png" %}"  height="95" width="80" /></div>
+      <div class="col-6 col-md-4"><img src="{% static "images/user.png" %}" height="40" width="43" /><img src="{% static "images/salir.png" %}" height="30" width="30" /></div>
+    </div>
   </body>
 </html>
+
+
