--- a/ProyectoIntro/plantillas/superior/Encabezado.html
+++ b/ProyectoIntro/plantillas/superior/Encabezado.html
@@ -11,7 +11,6 @@
       list-style: none;
       text-transform: uppercase;
       background-color: transparent;
-      
     }
 
     #encabezado li{
@@ -23,7 +22,7 @@
 
   <body>
     <div class="row no-gutters">
-      <div class="col-sm-6 col-md-8"><img i id="logo" src="{% static "images/logo1.png" %}"  height="95" width="80" /></div>
+      <div class="col-sm-6 col-md-8"></div>
       <div class="col-6 col-md-4"><img src="{% static "images/user.png" %}" height="40" width="43" /><img src="{% static "images/salir.png" %}" height="30" width="30" /></div>
     </div>
   </body>
