--- a/ProyectoIntro/plantillas/superior/barra.html
+++ b/ProyectoIntro/plantillas/superior/barra.html
@@ -12,13 +12,13 @@
   
   
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#"><img i id="logo" src="{% static "images/logo1.png" %}"  height="95" width="80" /></a>
+    <a class="navbar-brand" href="#"><img i id="logo" src="{% static "images/logo_pse.png" %}"  height="40" width="70" /></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item dropdown"
+      <li class="nav-item dropdown active">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Menu
         </a>
@@ -28,6 +28,13 @@
           <a class="dropdown-item" href="#">Salir</a>
         </div>
       </li>
+      <li class="nav-item">
+        <span > 
+          <img src="{% static "images/user.png" %}" height="40" width="43" />
+          <img src="{% static "images/salir.png" %}" height="30" width="30" />
+        </span>
+      </li>
+      
     </ul>
   </div>
 </nav>
