--- a/ProyectoIntro/plantillas/superior/barra.html
+++ b/ProyectoIntro/plantillas/superior/barra.html
@@ -1,18 +1,18 @@
-
 {% load static %}
+
 <!DOCTYPE html>
+
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title></title>
-  </head>
-  
-  
-  
-  
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#"><img i id="logo" src="{% static "images/logo_pse.png" %}"  height="40" width="70" /></a>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <title></title>
+</head>
+
+<body>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary">
+<div class="container">
+    <a class="navbar-brand" href="#"><img i id="logo" src="{% static 'images/logo_pse.png' %}"  height="30" width="80" /></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -28,28 +28,19 @@
           <a class="dropdown-item" href="#">Salir</a>
         </div>
       </li>
-      <li class="nav-item">
-        <span > 
-          <img src="{% static "images/user.png" %}" height="40" width="43" />
-          <img src="{% static "images/salir.png" %}" height="30" width="30" />
-        </span>
-      </li>
-      
     </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item" style="color:white;">
+        Cerrar Sesión
+      </li>
+      </ul>
+    </div>
   </div>
 </nav>
-  
-  
-  
-  
-  
-  
-  
+
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  </body>
+</body>
+
 </html>
-
-
-
