--- a/ProyectoIntro/plantillas/PSE_login.html
+++ b/ProyectoIntro/plantillas/PSE_login.html
@@ -12,17 +12,13 @@
 
     <!--FONTS-->
 
-    <link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel = "stylesheet" href = "{% static 'css/bootstrap.css' %}">
 
     <!-- Nuestro css-->
     <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
-
-    <!--JQUERY-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     
     <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 </head>
 
