No funciona la barra

--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_2.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_2.html
@@ -16,8 +16,7 @@
 	</head>
 
 	<body>
-    <!-- TABLA QUE NO FUNCIONA AUN
-    <table class="table table-hover">
+    <table class="table table-sm table-hover mr-4">
       <thead>
         <th>
           <td>Nombre</td>
@@ -30,7 +29,7 @@
           <td>Mark</td>
           <td>Otto</td>
         </tr>
-        <tr>
+        <tr style="transform: rotate(0);">
           <th scope="row"><a href="https://www.facebook.cl" class="stretched-link">2</a></th>
           <td>Jacob</td>
           <td>Thornton</td>
@@ -42,7 +41,6 @@
         </tr>
       </tbody>
     </table>
-    -->
 
     <script src="{% static 'js/jquery-3.4.1.slim.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
