--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_2.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_2.html
@@ -8,7 +8,7 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1">
     
     	<title>
-      		Probando la tabla
+          Tabla de Cursos
     	</title>
 
       <link rel="stylesheet" href="{% static 'css/prueba_tabla.css' %}">
@@ -16,14 +16,17 @@
 	</head>
 
 	<body>
-	
-		<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">		
-    <table id="myTable" class="table table-striped table-sm" cellspacing="0" width="100%" >
+    <div class="float-none">
+      <button type="button" class="btn btn-primary">Calificaciones Curso</button>
+      <button type="button" class="btn btn-primary">Progreso Curso</button>
+    </div>
+		
+    <input type="text" id="filtro" onkeyup="filtrarNombres()" placeholder="Buscar alumno...">
+    <table id="tablaAlumnos" class="table table-striped table-sm" cellspacing="0" width="100%" >
       <thead>
-      		<th class="th-sm">Id</th>
-          <th class="th-sm">Nombre</th>
-          <th class="th-sm">Apellido</th>
-        	
+      	<th class="th-sm">Id</th>
+        <th class="th-sm">Nombre</th>
+        <th class="th-sm">Apellido</th>        	
       </thead>
       <tbody>
         <tr style="transform: rotate(0);">
@@ -43,29 +46,6 @@
         </tr>
       </tbody>
     </table>
-		<script>
-		function myFunction() {
-  	// Declare variables
-  	var input, filter, table, tr, td, i, txtValue;
-  	input = document.getElementById("myInput");
-  	filter = input.value.toUpperCase();
-  	table = document.getElementById("myTable");
-  	tr = table.getElementsByTagName("tr");
 
-  	// Loop through all table rows, and hide those who don't match the search query
-  	for (i = 0; i < tr.length; i++) {
-    	td = tr[i].getElementsByTagName("td")[0];
-    	if (td) {
-      	txtValue = td.textContent || td.innerText;
-      	if (txtValue.toUpperCase().indexOf(filter) > -1) {
-        	tr[i].style.display = "";
-      	} else {
-        	tr[i].style.display = "none";
-      	}
-    	}
-  	}
-	}
-	</script>
-		
-	
-	</body>
+    <script src="{% static 'js/tabla.js' %}"></script>
+  </body>
