Se agrego la plantilla de la informacion del alumno
es una plantilla para un alumno generico.

--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Info. -Alumno {% endblock %}
+{% block title %} Info. Alumno {% endblock %}
 
 {% block content %}
 
@@ -21,9 +21,9 @@
 
   <div class="col-6">
     <div class="row ml-3 mt-4">
-      <button type="button" class="btn btn-primary btn-lg btn-block">Ver Calificaciones</button>
-      <button type="button" class="btn btn-primary btn-lg btn-block">Ver Información Personal</button>
-      <button type="button" class="btn btn-primary btn-lg btn-block">Ver Progreso</button>
+      <button type="button" href="#" class="btn btn-primary btn-lg btn-block">Ver Calificaciones</button>
+      <button type="button" href="#" class="btn btn-primary btn-lg btn-block">Ver Información Personal</button>
+      <button type="button" href="#" class="btn btn-primary btn-lg btn-block">Ver Progreso</button>
     </div>
   </div>
 </div>
