--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
@@ -22,7 +22,7 @@
   <div class="col-6">
     <div class="row ml-3 mt-4">
       <button type="button" href="#" class="btn btn-primary btn-lg btn-block">Ver Calificaciones</button>
-      <button type="button" href="#" class="btn btn-primary btn-lg btn-block">Ver Información Personal</button>
+      <button type="button" href="{% url 'alumno_info' %}" class="btn btn-primary btn-lg btn-block">Ver Información Personal</button>
       <button type="button" href="#" class="btn btn-primary btn-lg btn-block">Ver Progreso</button>
     </div>
   </div>
