Agregue Una fila a los alumnos
agregue a un alumno para conectarlo con la url profesores/alumno

--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_2.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_2.html
@@ -44,6 +44,11 @@
           <td>Larry</td>
           <td>the Bird</td>
         </tr>
+				<tr style="transform: rotate(0);">
+					<th scope="row"><a href="{% url 'alumno' %}" class="stretched-link">4</a></th>
+					<td>Juan</td>
+					<td>Perez</td>
+				</tr>
       </tbody>
     </table>
 
