--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
@@ -14,7 +14,7 @@
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Juan Perez</li>
-        <li class="list-group-item">3B</li>
+        <li class="list-group-item">1A</li>
       </ul>
     </div>
   </div>
