--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_info.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_info.html
@@ -14,7 +14,7 @@
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Juan Perez</li>
-        <li class="list-group-item">3B</li>
+        <li class="list-group-item">1A</li>
       </ul>
     </div>
   </div>
@@ -31,7 +31,7 @@
       <div class="form-group row">
         <label for="staticEmail" class="col-sm-2 col-form-label">Fecha Nacimiento:</label>
         <div class="col-sm-10">
-          <input type="text" readonly class="form-control" id="staticEmail" value="25 marzo 2010">
+          <input type="text" readonly class="form-control" id="staticEmail" value="25 marzo 2015">
         </div>
       </div>
 
