--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_2.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_2.html
@@ -17,8 +17,8 @@
 
 	<body>
     <div class="float-none">
-      <button type="button" class="btn btn-primary">Calificaciones Curso</button>
-      <button type="button" class="btn btn-primary">Progreso Curso</button>
+      <a href="#link" class="btn btn-primary" role="button">Calificaciones Curso</a>
+      <a href="#link" class="btn btn-primary" role="button">Progreso Curso</a>
     </div>
 		
     <input type="text" id="filtro" onkeyup="filtrarNombres()" placeholder="Buscar alumno...">
