--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
@@ -5,8 +5,6 @@
 
 {% block content %}
 
-<link rel="stylesheet" href="{% static 'css/disabledinput.css' %}">
-
 <div class="row ml-5 mt-3">
   <div class="col-4">
     <div class="card" style="width: 18rem;">
@@ -14,14 +12,49 @@
       <div class="card-body">
         <h5 class="card-title">Perfil Profesor</h5>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Diego Gonzales</li>
-      </ul>
     </div>
   </div>
 
-<form action="/action_page.php">
-  Nombre: <input type="text" name="name"  disabled><br>
-</form>
+  <div class="col-6">
+    <form>
+      <div class="form-group row">
+        <label for="staticEmail" class="col-sm-2 col-form-label">Nombre:</label>
+        <div class="col-sm-10">
+          <input type="text" readonly class="form-control" id="staticEmail" value="Diego Gonzalez">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="staticEmail" class="col-sm-4 col-form-label">Fecha de Nacimiento:</label>
+        <div class="col-sm-8">
+          <input type="text" readonly class="form-control" id="staticEmail" value="30/02/1960">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="staticEmail" class="col-sm-3 col-form-label">Correo Electrónico:</label>
+        <div class="col-sm-9">
+          <input type="text" readonly class="form-control" id="staticEmail" value="diego.gonzalez@mail.com">
+        </div>
+      </div>
+
+      <div class="float-right">
+        <p><small> <a href="https://www.google.com">cambiar correo</a></small></p>
+      </div>
+    </form>
+    &nbsp;
+    <h3>Cambiar Contraseña</h3>
+
+    <form>
+      <div class="form-group row">
+        <label for="staticEmail" class="col-sm-3 col-form-label">Ingrese contraseña actual:</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" id="staticEmail" value="diego.gonzalez@mail.com">
+        </div>
+      </div>      
+    </form>
+  </div>
+
+</div>
 
 {% endblock %}
