--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
@@ -47,11 +47,26 @@
 
     <form>
       <div class="form-group row">
-        <label for="staticEmail" class="col-sm-3 col-form-label">Ingrese contraseña actual:</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" id="staticEmail" value="diego.gonzalez@mail.com">
+        <label for="staticPasswordOld" class="col-sm-4 col-form-label">Ingrese contraseña actual:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="staticPasswordOld">
         </div>
-      </div>      
+      </div>
+
+      <div class="form-group row">
+        <label for="staticPasswordNew_1" class="col-sm-4 col-form-label">Ingrese nueva contraseña:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="staticPasswordNew_1">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="staticPasswordNew_2" class="col-sm-4 col-form-label">Re-ingrese nueva contraseña:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="staticPasswordNew_2">
+        </div>
+      </div>
+
     </form>
   </div>
 
