Detalles en barra menu y prefil profesor

--- a/ProyectoIntro/plantillas/superior/barra.html
+++ b/ProyectoIntro/plantillas/superior/barra.html
@@ -22,6 +22,7 @@
           Menu
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="{% url 'perfil_profesor' %}">Cuenta</a>
           <a class="dropdown-item" href="{% url 'cursos_1' %}">Ver Cursos</a>
           <a class="dropdown-item" href="#">Ayuda</a>
           <a class="dropdown-item" href="#">Salir</a>
