--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
@@ -21,8 +21,8 @@
 
   <div class="col-6">
     <div class="row ml-3 mt-4">
-      <a type="button" class="btn btn-primary btn-lg btn-block" href="#">Ver Calificaciones</a>
-      <a type="button" class="btn btn-primary btn-lg btn-block" href="{% url 'alumno_info' %}">Ver Información Personal</a> 
+      <a type="button" class="btn btn-primary btn-lg btn-block" href="{% url 'alumno_notas' %}">Ver Calificaciones</a>
+      <a type="button" class="btn btn-primary btn-lg btn-block" href="{% url 'alumno_info' %}">Ver Información Personal</a>
       <a type="button" class="btn btn-primary btn-lg btn-block" href="#">Ver Progreso</a>
     </div>
   </div>
