--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
@@ -5,69 +5,72 @@
 
 {% block content %}
 
-  <div class="col-4">
-    <div class="card" style="width: 18rem;">
-      <img src="{% static 'images/profesor.jpg' %}"  class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Perfil Profesor</h5>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-4">
+      <div class="card" style="width: 18rem;">
+        <img src="{% static 'images/profesor.jpg' %}"  class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Perfil Profesor</h5>
+        </div>
       </div>
+   </div>
+    
+    <div class="col-6">
+      <form>
+        <div class="form-group row">
+          <label for="staticEmail" class="col-sm-2 col-form-label">Nombre:</label>
+          <div class="col-sm-10">
+            <input type="text" readonly class="form-control" id="staticEmail" value="Diego Gonzalez">
+          </div>
+        </div>
+  
+        <div class="form-group row">
+          <label for="staticEmail" class="col-sm-4 col-form-label">Fecha de Nacimiento:</label>
+          <div class="col-sm-8">
+            <input type="text" readonly class="form-control" id="staticEmail" value="30/02/1960">
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="staticEmail" class="col-sm-3 col-form-label">Correo Electrónico:</label>
+          <div class="col-sm-9">
+            <input type="text" readonly class="form-control" id="staticEmail" value="diego.gonzalez@mail.com">
+          </div>
+        </div>
+
+        <div class="float-right">
+          <p><small> <a href="https://www.google.com">cambiar correo</a></small></p>
+        </div>
+      </form>
+      &nbsp;
+      <h3>Cambiar Contraseña</h3>
+
+      <form>
+        <div class="form-group row">
+          <label for="staticPasswordOld" class="col-sm-4 col-form-label">Ingrese contraseña actual:</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="staticPasswordOld">
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="staticPasswordNew_1" class="col-sm-4 col-form-label">Ingrese nueva contraseña:</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="staticPasswordNew_1">
+         </div>
+        </div>
+
+        <div class="form-group row">
+         <label for="staticPasswordNew_2" class="col-sm-4 col-form-label">Re-ingrese nueva contraseña:</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="staticPasswordNew_2">
+          </div>
+        </div>
+
+      </form>
+      <input class="btn btn-light" type="submit" value="Guardar">
     </div>
   </div>
-  
-  <div class="col-6">
-    <form>
-      <div class="form-group row">
-        <label for="staticEmail" class="col-sm-2 col-form-label">Nombre:</label>
-        <div class="col-sm-10">
-          <input type="text" readonly class="form-control" id="staticEmail" value="Diego Gonzalez">
-        </div>
-      </div>
-
-      <div class="form-group row">
-        <label for="staticEmail" class="col-sm-4 col-form-label">Fecha de Nacimiento:</label>
-        <div class="col-sm-8">
-          <input type="text" readonly class="form-control" id="staticEmail" value="30/02/1960">
-        </div>
-      </div>
-
-      <div class="form-group row">
-        <label for="staticEmail" class="col-sm-3 col-form-label">Correo Electrónico:</label>
-        <div class="col-sm-9">
-          <input type="text" readonly class="form-control" id="staticEmail" value="diego.gonzalez@mail.com">
-        </div>
-      </div>
-
-      <div class="float-right">
-        <p><small> <a href="https://www.google.com">cambiar correo</a></small></p>
-      </div>
-    </form>
-    &nbsp;
-    <h3>Cambiar Contraseña</h3>
-
-    <form>
-      <div class="form-group row">
-        <label for="staticPasswordOld" class="col-sm-4 col-form-label">Ingrese contraseña actual:</label>
-        <div class="col-sm-8">
-          <input type="text" class="form-control" id="staticPasswordOld">
-        </div>
-      </div>
-
-      <div class="form-group row">
-        <label for="staticPasswordNew_1" class="col-sm-4 col-form-label">Ingrese nueva contraseña:</label>
-        <div class="col-sm-8">
-          <input type="text" class="form-control" id="staticPasswordNew_1">
-        </div>
-      </div>
-
-      <div class="form-group row">
-        <label for="staticPasswordNew_2" class="col-sm-4 col-form-label">Re-ingrese nueva contraseña:</label>
-        <div class="col-sm-8">
-          <input type="text" class="form-control" id="staticPasswordNew_2">
-        </div>
-      </div>
-
-    </form>
-    <input class="btn btn-light" type="submit" value="Guardar">
-  </div>
-
+</div>
 {% endblock %}
