--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_2.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_2.html
@@ -18,7 +18,7 @@
 	<body>
     <div class="float-none">
       <a href="{% url 'curso_calificaciones' %}" class="btn btn-primary" role="button">Calificaciones Curso</a>
-      <a href="#link" class="btn btn-primary" role="button">Progreso Curso</a>
+      <a href="{% url 'obs_por_curso' %}" class="btn btn-primary" role="button">Progreso Curso</a>
     </div>
 
     <input type="text" id="filtro" onkeyup="filtrarNombres()" placeholder="Buscar alumno...">
