--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_1.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_1.html
@@ -7,14 +7,14 @@
 <div class="row ml-5 mt-3">
   <div class="col-4">
     <div class="list-group" id="list-tab" role="tablist">
-    <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">1-A</a>
+    <a name="curso" class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">1-A</a>
       <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">1-B</a>
     </div>
   </div>
-  
+
   <div class="col-8">
     <div class="tab-content" id="nav-tabContent">
-      <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">{% include 'profesores/PSE_profesores_cursos_2.html' %}</div>
+      <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">{% include 'profesores/test.html' %}</div>
       <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>
     </div>
   </div>
