usando la base de datos 2
cree en la base de datos la table de cursos y se uso para conectarlo en PSE_profesores_cursos_1.html

--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_1.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_1.html
@@ -7,15 +7,17 @@
 <div class="row ml-5 mt-3">
   <div class="col-4">
     <div class="list-group" id="list-tab" role="tablist">
-    <a name="curso" class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">1-A</a>
-      <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">1-B</a>
+      {% for curso in cursos %}
+      <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">{{curso}}</a>
+      {% endfor %}
     </div>
   </div>
 
   <div class="col-8">
     <div class="tab-content" id="nav-tabContent">
-      <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">{% include 'profesores/test.html' %}</div>
-      <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>
+      {% for curso in cursos %}
+        <div class="tab-pane fade" id="list-home" role="tabpanel" aria-labelledby="list-home-list">{% include 'profesores/test.html' %}</div>
+      {% endfor %}
     </div>
   </div>
 </div>
