--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="container mt-3">
+<div class="container-fluid mt-3">
   <div class="row">
     <div class="col-4">
       <div class="card" style="width: 18rem;">
@@ -15,7 +15,7 @@
         </div>
       </div>
    </div>
-    
+
     <div class="col-6">
       <form>
         <div class="form-group row">
@@ -24,7 +24,7 @@
             <input type="text" readonly class="form-control" id="staticEmail" value="Diego Gonzalez">
           </div>
         </div>
-  
+
         <div class="form-group row">
           <label for="staticEmail" class="col-sm-4 col-form-label">Fecha de Nacimiento:</label>
           <div class="col-sm-8">
