--- a/ProyectoIntro/plantillas/superior/Encabezado.html
+++ b/ProyectoIntro/plantillas/superior/Encabezado.html
@@ -6,9 +6,12 @@
   </head>
 
   <body>
+    <div class="container-fluid">
+
+
       <div class="row">
         <div class="col-md-auto ml-5">
-          <img src="{% static 'images/logo_usm.png' %}"  height="90" width="120"/> 
+          <img src="{% static 'images/logo_usm.png' %}"  height="90" width="120"/>
         </div>
         <div class="col-md-auto my-auto">
            <div id="al_lado_del_logo">
@@ -24,10 +27,12 @@
           <p class="font-weight-bold">
             JUAN PÉREZ
           </p>
-        </div>      
+        </div>
         <div class="col-md-auto mr-5 my-auto">
           <img src="{% static 'images/usuario.png' %}"  height="70" width="80"/>
         </div>
       </div>
+
+    </div>
   </body>
 </html>
