--- a/ProyectoIntro/plantillas/superior/barra.html
+++ b/ProyectoIntro/plantillas/superior/barra.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+<div class="container-fluid">
+
+
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary">
 <div class="container">
     <a class="navbar-brand" href="{% url 'profesores' %}"><img i id="logo" src="{% static 'images/logo_pse.png' %}"  height="30" width="80" /></a>
@@ -37,6 +40,8 @@
     </div>
   </div>
 </nav>
+
+</div>
 </body>
 
 </html>
