--- a/ProyectoIntro/plantillas/base.html
+++ b/ProyectoIntro/plantillas/base.html
@@ -7,8 +7,8 @@
     <!-- CSS DE BOOTSTRAP -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+
     <title>
       {% block title %} {% endblock %}
     </title>
