--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_1.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_1.html
@@ -4,22 +4,25 @@
 
 {% block content %}
 
-<div class="row ml-5 mt-3">
-  <div class="col-4">
-    <div class="list-group" id="list-tab" role="tablist">
-      {% for curso in cursos %}
-        <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">{{curso}}</a>
-      {% endfor %}
-    </div>
-  </div>
+<div class="container-fluid">
 
-  <div class="col-8">
-    <div class="tab-content" id="nav-tabContent">
-      {% for curso in cursos %}
-        <div class="tab-pane fade" id="list-home" role="tabpanel" aria-labelledby="list-home-list">{% include 'profesores/test.html' %}</div>
-      {% endfor %}
-    </div>
+
+  <div class="row ml-5 mt-3">
+    <div class="col-4">
+      <div class="list-group" id="list-tab" role="tablist">
+        {% for curso in cursos %}
+          <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">{{curso}}</a>
+          {% endfor %}
+        </div>
+      </div>
+
+      <div class="col-8">
+        <div class="tab-content" id="nav-tabContent">
+          {% for curso in cursos %}
+          <div class="tab-pane fade" id="list-home" role="tabpanel" aria-labelledby="list-home-list">{% include 'profesores/test.html' %}</div>
+          {% endfor %}
+        </div>
+      </div>
   </div>
 </div>
-
 {% endblock %}
