Las tablas con base de datos
se hicieron muchos cambios para que las tablas de los cursos sean correctas al apretar un boton de la lista. Ademas se arreglo el problema del tamaño de la nav-bar.

--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
@@ -16,8 +16,8 @@
           <h5 class="card-title">Perfil Alumno</h5>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Juan Perez</li>
-          <li class="list-group-item">1A</li>
+          <li class="list-group-item">{{estudiante.0}}</li>
+          <li class="list-group-item">{{estudiante.0.curso}}</li>
         </ul>
       </div>
     </div>
