--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_info.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_info.html
@@ -5,6 +5,9 @@
 
 {% block content %}
 
+<div class="container-fluid">
+
+
 <div class="row ml-5 mt-3">
   <div class="col-4">
     <div class="card" style="width: 18rem;">
@@ -68,4 +71,6 @@
   </div>
 </div>
 
+
+</div>
 {% endblock %}
