--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
@@ -5,6 +5,10 @@
 
 {% block content %}
 
+<div class="container-fluid">
+
+
+
 <div class="col-11 ml-5">
   <div class="table-responsive">
     <table class="table  table-striped table-light">
@@ -104,5 +108,7 @@
       </tbody>
     </table>
   </div>
+</div>
+
 </div>
 {% endblock %}
