--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_1.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_1.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %} Cursos {% endblock %}
 
@@ -7,11 +8,11 @@
 <div class="container-fluid">
 
 
-  <div class="row ml-5 mt-3">
+  <div class="row mt-3">
     <div class="col-4">
       <div class="list-group" id="list-tab" role="tablist">
         {% for curso in cursos %}
-          <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">{{curso}}</a>
+          <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home-{{forloop.counter}}" role="tab" aria-controls="home">{{curso}}</a>
           {% endfor %}
         </div>
       </div>
@@ -19,10 +20,47 @@
       <div class="col-8">
         <div class="tab-content" id="nav-tabContent">
           {% for curso in cursos %}
-          <div class="tab-pane fade" id="list-home" role="tabpanel" aria-labelledby="list-home-list">{% include 'profesores/test.html' %}</div>
+          <div class="tab-pane fade" id="list-home-{{forloop.counter}}" role="tabpanel" aria-labelledby="list-home-list">
+
+            <div class="float-none">
+              <a href="{% url 'curso_calificaciones' %}" class="btn btn-primary" role="button">Calificaciones Curso</a>
+              <a href="{% url 'obs_por_curso' %}" class="btn btn-primary" role="button">Progreso Curso</a>
+            </div>
+
+            <input type="text" id="filtro" onkeyup="filtrarNombres()" placeholder="Buscar alumno...">
+
+            <div class="table-responsive">
+            <table id="tablaAlumnos" class="table table-striped table-light table-sm" cellspacing="0" width="100%" >
+              <thead>
+                <th class="th-sm">Id</th>
+                <th class="th-sm">Nombre</th>
+                <th class="th-sm">Apellido</th>
+                <th class="th-sm">Curso</th>
+              </thead>
+              <tbody>
+
+              {% for estudiante in estudiantes %}
+                  {% if estudiante.curso == curso.curso %}
+                    <tr style="transform: rotate(0);">
+                      <th scope="row"><a href="{% url 'alumno' user=estudiante.id %}" class="stretched-link">{{estudiante.id}}</a></th>
+                      <td>{{estudiante.nombres}}</td>
+                      <td>{{estudiante.apellidos}}</td>
+                      <td>{{estudiante.curso}}</td>
+                    </tr>
+                  {% endif %}
+              {% endfor %}
+              </tbody>
+            </table>
+            </div>
+
+          </div>
           {% endfor %}
         </div>
       </div>
   </div>
+
+
 </div>
+<link rel="stylesheet" href="{% static 'css/prueba_tabla.css' %}">
+<script src="{% static 'js/tabla.js' %}"></script>
 {% endblock %}
