--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_observaciones_por_curso.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_observaciones_por_curso.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="container mt-3">
+<div class="container-fluid mt-3">
 	<div class="row">
 		<div class="col-sm-1">
 			Alumno(a):
