--- a/ProyectoIntro/plantillas/superior/Encabezado.html
+++ b/ProyectoIntro/plantillas/superior/Encabezado.html
@@ -10,10 +10,12 @@
 
 
       <div class="row">
-        <div class="col-md-auto ml-5">
+
+        <div class="col-auto col-md-auto col-lg-auto col-xl-auto col-sm-auto ml-5">
           <img src="{% static 'images/logo_usm.png' %}"  height="90" width="120"/>
         </div>
-        <div class="col-md-auto my-auto">
+
+        <div class="col-auto col-md-auto col-lg-auto col-xl-auto col-sm-auto my-auto">
            <div id="al_lado_del_logo">
             <p class="font-weight-bold">
               UNIVERSIDAD SANTA MARÍA
@@ -23,14 +25,17 @@
             </p>
           </div>
         </div>
-        <div class="col-md-auto my-auto ml-auto">
+
+        <div class="col-auto mr-1 col-md-auto col-lg-auto col-xl-auto col-sm-auto my-auto ml-auto">
           <p class="font-weight-bold">
             JUAN PÉREZ
           </p>
         </div>
-        <div class="col-md-auto mr-5 my-auto">
+
+        <div class="col-auto col-md-auto col-lg-auto col-xl-auto col-sm-auto mr-5 mb-1 my-auto">
           <img src="{% static 'images/usuario.png' %}"  height="70" width="80"/>
         </div>
+
       </div>
 
     </div>
