--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_info.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_info.html
@@ -9,8 +9,8 @@
 
 
 <div class="row ml-5 mt-3">
-  <div class="col-4">
-    <div class="card" style="width: 18rem;">
+  <div class="col-9 col-sm-3">
+    <div class="card">
       <img src="{% static 'images/alumno.jpg' %}"  class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Perfil Alumno</h5>
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <div class="col-6">
+  <div class="col-9 ml-sm-5 mt-3 mb-3 col-sm-6">
     <form>
       <div class="form-group row">
         <label for="staticEmail" class="col-sm-2 col-form-label">Nombre:</label>
