--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_1.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos_1.html
@@ -8,7 +8,7 @@
 <div class="container-fluid">
 
 
-  <div class="row mt-3">
+  <div class="row ml-3 mt-3">
     <div class="col-4">
       <div class="list-group" id="list-tab" role="tablist">
         {% for curso in cursos %}
