--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
@@ -5,18 +5,21 @@
 
 {% block content %}
 
-<div class="container-fluid mt-3">
-  <div class="row">
-    <div class="col-4">
-      <div class="card" style="width: 18rem;">
+<div class="container-fluid">
+
+  <div class="row ml-5 mt-3">
+
+    <div class="col-9 col-sm-3">
+      <div class="card">
         <img src="{% static 'images/profesor.jpg' %}"  class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Perfil Profesor</h5>
         </div>
       </div>
-   </div>
+    </div>
 
-    <div class="col-6">
+
+    <div class="col-9 ml-sm-5 mt-3 mb-3 col-sm-6">
       <form>
         <div class="form-group row">
           <label for="staticEmail" class="col-sm-2 col-form-label">Nombre:</label>
@@ -71,6 +74,7 @@
       </form>
       <input class="btn btn-light" type="submit" value="Guardar">
     </div>
+
   </div>
 </div>
 {% endblock %}
