Agregando base de datos a alumno_info

--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
@@ -11,7 +11,7 @@
   <div class="row ml-5 mt-3">
     <div class="col-9 col-sm-3">
       <div class="card">
-        <img src="{% static 'images/alumno.jpg' %}"  class="card-img-top" alt="...">
+        <img src="{{estudiante.0.foto.url}}"  class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Perfil Alumno</h5>
         </div>
@@ -24,7 +24,7 @@
 
     <div class="col-9 ml-sm-5 mt-3 mb-3 col-sm-6">
         <a type="button" class="btn btn-primary btn-lg btn-block" href="{% url 'alumno_notas' %}">Ver Calificaciones</a>
-        <a type="button" class="btn btn-primary btn-lg btn-block" href="{% url 'alumno_info' %}">Ver Información Personal</a>
+        <a type="button" class="btn btn-primary btn-lg btn-block" href="{% url 'alumno_info' user=estudiante.0.id %}">Ver Información Personal</a>
         <a type="button" class="btn btn-primary btn-lg btn-block" href="{% url 'alumno_progreso' %}">Ver Progreso</a>
     </div>
   </div>
