--- a/ProyectoIntro/plantillas/superior/barra.html
+++ b/ProyectoIntro/plantillas/superior/barra.html
@@ -26,7 +26,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="{% url 'perfil_profesor' %}">Cuenta</a>
-          <a class="dropdown-item" href="{% url 'cursos_1' %}">Ver Cursos</a>
+          <a class="dropdown-item" href="{% url 'cursos' %}">Ver Cursos</a>
           <a class="dropdown-item" href="#">Ayuda</a>
           <a class="dropdown-item" href="#">Salir</a>
         </div>
