--- a/ProyectoIntro/plantillas/superior/barra.html
+++ b/ProyectoIntro/plantillas/superior/barra.html
@@ -33,7 +33,7 @@
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item" style="color:white;">
+      <li href="{% url 'logout' %}" class="nav-item" style="color:white;">
         Cerrar Sesión
       </li>
     </ul>
