--- a/ProyectoIntro/plantillas/superior/barra.html
+++ b/ProyectoIntro/plantillas/superior/barra.html
@@ -33,8 +33,8 @@
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
-      <li href="{% url 'logout' %}" class="nav-item" style="color:white">
-        Cerrar Sesión
+      <li  class="nav-item" >
+        <a href="{% url 'logout' %}"style="color:white;">Cerrar Sesión</a>
       </li>
     </ul>
     </div>
