--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos.html
@@ -6,16 +6,28 @@
 {% block content %}
 
 <div class="container-fluid">
-
-
+  
   <div class="row ml-3 mt-3">
     <div class="col-4">
-      <div class="list-group" id="list-tab" role="tablist">
+      <h1>Mis Ramos:</h1>
+      <div class="btn-group btn-group-toggle" data-toggle="buttons">
+          {% for ramo in ramos %}
+          <form action="#" method="get">
+            <input type="submit" class="btn btn-secondary" value="{{ramo}}" name="seleccion">
+          </form>
+          {% endfor %}
+      </div>
+    </div>
+  </div>
+  
+  <div class="row ml-3 mt-3">
+    <div class="col-4">
+      <div class="list-group" id="list-tab-{{forloop.counter}}" role="tablist">
         {% for curso in cursos %}
           <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home-{{forloop.counter}}" role="tab" aria-controls="home">{{curso}}</a>
-          {% endfor %}
-        </div>
+        {% endfor %}
       </div>
+    </div>
 
       <div class="col-8">
         <div class="tab-content" id="nav-tabContent">
