--- a/ProyectoIntro/plantillas/superior/Encabezado.html
+++ b/ProyectoIntro/plantillas/superior/Encabezado.html
@@ -28,7 +28,7 @@
 
         <div class="col-auto mr-1 col-md-auto col-lg-auto col-xl-auto col-sm-auto my-auto ml-auto">
           <p class="font-weight-bold">
-            {{ user.first_name }} {{ user.last_name }}
+            JUAN PÉREZ
           </p>
         </div>
 
