--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_info.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_info.html
@@ -12,7 +12,9 @@
 <div class="row ml-5 mt-3">
   <div class="col-9 col-sm-3">
     <div class="card">
-      <img src="{% static 'images/alumno.jpg' %}"  class="card-img-top" alt="...">
+      {% if estudiante.0.foto %}
+      <img src="{{estudiante.0.foto.url}}"  class="card-img-top" alt="foto de perfil" height="300">
+      {% endif %}
       <div class="card-body">
         <h5 class="card-title">Perfil Alumno</h5>
       </div>
