--- a/ProyectoIntro/plantillas/profesores/test.html
+++ b/ProyectoIntro/plantillas/profesores/test.html
@@ -1,54 +1,81 @@
-{% load static %}
-{% load crispy_forms_tags %}
 
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
-
 <head>
-    <meta charset = "UTF-8">
-    <meta name = "viewport" content = "width = device-width, initial.scale = 1.0">
-    <meta htpp-equiv = "X-UA-compatible" content = "ie-edge">
 
-    <title>Log In</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Hello, Bootstrap Table!</title>
 
-    <!--FONTS-->
-
-    <link rel = "stylesheet" href = "{% static 'css/bootstrap.css' %}">
-
-    <!-- Nuestro css-->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
-    
-    <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
 
 </head>
-
 <body>
 
-    <div class = "row">
-        <div class = "col-lg-4 m-auto">
-            <div class = "card mt-4">
-                <div class = "card-title ml-4 mt-3">
-                    <h2 class="font-weight-bold">Iniciar Sesión</h2>
-                </div>
-                <div class = "card-body">
-                    <form method = "POST">
-                        {% csrf_token %}
-                        <fieldset class="form-group">
-                          <legend class="border_bottom mb-4"> Log In </legend>
-                          {{ form|crispy }}
-                        </fieldset>
-                        <div class="form-group">
-                          <button type="submit" class="btn btn-outline-info">
-                            Iniciar Sesión
-                          </button>
-                        </div>
-                    </form>
-                </div>
+
+  <div class="container-fluid">
+
+    <div class="row ml-3 mt-3">
+      <div class="col-4">
+        <div class="jumbotron">
+          <h1 class="display-4">Mis Ramos:</h1>
+          <h5>Seleccione que ramo quiere ver:</h5>
+            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <form action="#" method="get">
+                  {% for ramo in ramos %}
+                  <label class="btn btn-primary">
+                    <input type="submit" class="btn btn-primary" value="{{ramo}}" name="seleccion">
+                  </label>
+                  {% endfor %}
+                </form>
+              </div>
+              <hr class="my-4">
+              <div class="list-group" id="list-tab-{{forloop.counter}}" role="tablist">
+                <h1 class="display-4">Mis Cursos:</h1>
+                <h5>Seleccione que curso quiere ver:</h5>
+                {% for curso in cursos %}
+                <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home-{{forloop.counter}}" role="tab" aria-controls="home">{{curso}}</a>
+                {% endfor %}
+              </div>
             </div>
+          </div>
+
+          <div class="col-8">
+            <table
+            data-toggle="table"
+            data-url="data1.json"
+            data-pagination="true"
+            data-search="true">
+            <thead>
+              <tr>
+                <th data-sortable="true" data-field="id">Item ID</th>
+                <th data-field="name">Item Name</th>
+                <th data-field="price">Item Price</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Item 1</td>
+                <td>$1</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Item 2</td>
+                <td>$2</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
+      </div>
+
     </div>
-
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"></script>
 </body>
-
 </html>
