--- a/ProyectoIntro/plantillas/superior/Encabezado.html
+++ b/ProyectoIntro/plantillas/superior/Encabezado.html
@@ -11,29 +11,29 @@
 
       <div class="row">
 
-        <div class="col-auto col-md-auto col-lg-auto col-xl-auto col-sm-auto ml-5">
-          <img src="{% static 'images/logo_usm.png' %}"  height="90" width="120"/>
+        <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 my-auto ml-5">
+          <img src="{% static 'images/logo_usm.png' %}" class="img-fluid" width="120"/>
         </div>
 
-        <div class="col-auto col-md-auto col-lg-auto col-xl-auto col-sm-auto my-auto">
-           <div id="al_lado_del_logo">
-            <p class="font-weight-bold">
+        <div class="col-4 col-sm-4 col-md-5 col-lg-5 col-xl-6  my-auto">
+            <div class="row font-weight-bold">
               UNIVERSIDAD SANTA MARÍA
-            </p>
-            <p class="font-weight-bold">
+            </div>
+            <div class="row font-weight-bold">
               AÑO 2020
-            </p>
+            </div>
+        </div>
+
+        <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 mr-1 my-auto ">
+          <div class="row font-weight-bold">
+            {{ user.first_name }} {{ user.last_name }}
           </div>
         </div>
 
-        <div class="col-auto mr-1 col-md-auto col-lg-auto col-xl-auto col-sm-auto my-auto ml-auto">
-          <p class="font-weight-bold">
-            {{ user.first_name }} {{ user.last_name }}
-          </p>
-        </div>
-
-        <div class="col-auto col-md-auto col-lg-auto col-xl-auto col-sm-auto mr-5 mb-1 my-auto">
-          <img src="{% static 'images/usuario.png' %}"  height="70" width="80"/>
+        <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-1  my-auto">
+          <a href="{% url 'perfil_profesor' %}">
+            <img src="{% static 'images/usuario.png' %}" class="img-fluid rounded" width="100"/>
+          </a>
         </div>
 
       </div>
